# influenza

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  db.py  pyproject.toml  schema.sql
docs/: SESSION_HANDOFF_2026-02-18.md
docs/plans/: 2026-02-18-agent-architecture-design.md
docs/research/: api_validation_report.md  historical_data_report.md  model_design_spec.md  polymarket_analysis_report.md
gemini_outputs/: edge.md
gemini_prompts/: data_source_reliability.md  edge_durability.md  statistical_validity.md
models/: CLAUDE.md  __init__.py  backfill.py
monitoring/: __init__.py
scripts/: analyze_revisions.py
signals/: CLAUDE.md  __init__.py  base.py  delphi_epidata.py  wastewater.py
tests/: test_backfill.py  test_delphi_epidata.py  test_polymarket.py  test_wastewater.py
trading/: CLAUDE.md  __init__.py  polymarket.py
