[project]
name = "flusight-edge"
version = "0.1.0"
description = "Multi-signal epidemiological nowcasting bot for Polymarket flu hospitalization markets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pytrends>=4.9",
    "py-clob-client>=0.1",
    "python-dotenv>=1.0",
    "web3>=6.0",
    "beautifulsoup4>=4.12",
    "schedule>=1.2",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipython>=8.0",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
